--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "css-loader": "^0.28.10",
     "jquery": "^3.2.1",
+    "less": "^3.0.1",
+    "less-loader": "^4.0.5",
     "vue": "^2.5.2",
     "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1"
@@ -67,6 +70,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "style-loader": "^0.19.1",
+    "swiper": "^4.1.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
