--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "less": "^3.0.1",
     "less-loader": "^4.0.5",
     "vue": "^2.5.2",
+    "vue-infinite-loading": "^2.2.3",
     "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1"
   },
